Fixed a Firefox bug in which copying and pasting text between notes inserted line breaks in the pasted text.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -599,8 +599,7 @@ h1 {
   margin: 0em;
   font-size: 90%;
   line-height: 140%;
-  white-space: -moz-pre-wrap;
-  white-space: pre-wrap;
+  white-space: pre-line;
   word-wrap: break-word;
 }
 
